--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.50.3",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "lucide-react": "^0.552.0",
     "next": "15.3.3",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
